Disable auto uploading for jQuery Uploader, ref #1768
Uploading several files at once was causing errors with the upload resulting in blank lines in the table of uploaded files.

This disables the auto-uploading feature in the jQuery uploader plugin resulting in files being queued instead of automatically
uploaded. A button is provided to complete the upload process for all files to save the trouble of having to click on each one.

--- a/config/locales/lakeshore.en.yml
+++ b/config/locales/lakeshore.en.yml
@@ -13,6 +13,10 @@ en:
       errors:
         invalid: "Incorrect asset type. %{name} is not a type of %{type}"
         duplicate: "%{name} is a duplicate of:"
+      available_files:
+        heading: Files Available for Upload
+        description: Files that are ready to be added to this asset will appear below.
+      external_resources: External Resources
     relationship:
       add_assets: "Add New Assets to this Resource"
       batch_add_representations: "Add Representations"
