Enable batch edit facility, ref #920
Assets need to be able to be edited in batches.

Enables editing of certain fields for a group of assets. Additionally, provides the ability to apply the same permissions
to a group of assets, including user and group access, as well as visibility.

Includes some refactoring of existing feature tests, and support for loading test objects in Solr only. This can drastically
reduce test time because Fedora is not required to generate the complete resource.

--- a/config/locales/lakeshore.en.yml
+++ b/config/locales/lakeshore.en.yml
@@ -22,3 +22,5 @@ en:
         metadata: "Descriptions"
         share: "Share"
       copy_warning: "Visibility and sharing only affect the collection itself, not its member resources, which have their own permissions"
+    batch_edit:
+      permissions_warning: "WARNING! Editing these fields will remove any existing values on the assets and replace with the ones specified in the form"
