--- a/config/locales/lakeshore.en.yml
+++ b/config/locales/lakeshore.en.yml
@@ -13,6 +13,7 @@ en:
       errors:
         invalid: "Incorrect asset type. %{name} is not a type of %{type}"
         duplicate: "%{name} is a duplicate of:"
+
     relationship:
       add_assets: "Add New Assets to this Resource"
       batch_add_representations: "Add Representations"
@@ -24,3 +25,10 @@ en:
       copy_warning: "Visibility and sharing only affect the collection itself, not its member resources, which have their own permissions"
     batch_edit:
       permissions_warning: "WARNING! Editing these fields will remove any existing values on the assets and replace with the ones specified in the form"
+    form_progress:
+      uploads_required_complete: "No failed uploads"
+      uploads_required: "Files failed to upload. Please remove them from the queue before saving."
+      metadata_required_complete: "Metadata requirement complete"
+      metadata_required: "Enter required metadata"
+      files_required_complete: "Files requirement complete"
+      files_required: "Add files"
