added key to sufia yml in order to override header's h1

--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -140,6 +140,9 @@ en:
         header: "Add New Work"
       edit:
         header: "Edit Work"
+    works:
+      new:
+        header: "Create New Assets"
     Batch Upload Item:
       header: "Add New Asset"
     collection:
