Feature #2434: Expose existing form field: Imaging UID https://cits.artic.edu/redmine/issues/2434
* inserts :imaging_uid into GenericWorkForm::aic_terms in order to render field in GenericWorkForm
* overrides build_form method for GenericWorksController so that action_name is accessible inside GenericWorkForm obj
* tweaks ::aic_terms so that it subtracts :imaging_uid_placeholder if action_name is "new"
* changes form ob to use instance setter instead of constructor, much easier and makes more sense
* changes GenericWorkForm::aic_terms to use Ruby2 keyword/named argument
* refactors imaging_uid_placeholder=
* sets current_ability so it's accessible inside GenericWorkForm class
* removes unnecessary setting of action_name for batch_uploads, you'll never have to "edit" a batch upload, just individual assets via GenericWorkForm
* sets current_ability setter and accepts arg inside GenericWorkForm::aic_terms
* adds condition so that if action is new OR current ability is not an admin, remove :imaging_uid_placeholder
* removes passing in action_name on BatchUploadForm since we'll never view a batch_upload edit page
* fixes test b/c test user is not admin, and only admin can see imaging_uid field

--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -184,6 +184,7 @@ en:
         documents_for:          "Documentation For"
         publish_channels:       "Publish Channels"
         imaging_uid:            "Imaging UID"
+        imaging_uid_placeholder: "Imaging UID"
         view_notes:             "View Notes"
         visual_surrogate:       "Visual Surrogate"
         attachment_uris:        "Attachments"
@@ -217,6 +218,7 @@ en:
         digitization_source_uri: "Original document for non-born-digital assets."
         documents_for: "A CITI resource for which these assets serve as documents."
         document_type_uri: "Select one document type from the hierarchy."
+        imaging_uid: "Unique image number assigned by Imaging."
         imaging_uid: "Unique image number assigned by Imaging."
         keyword_uris: "Keyword to loosely classify a resource by topic, theme, subject, etc."
         language: "The language of the asset content."
