Bug #1686: GUI: improve duplicate file checking (rapid GUI batches, and dupes in same batch) (#445)
https://cits.artic.edu/issues/1686

--- a/config/locales/lakeshore.en.yml
+++ b/config/locales/lakeshore.en.yml
@@ -13,6 +13,8 @@ en:
       errors:
         invalid: "Incorrect asset type. %{name} is not a type of %{type}"
         duplicate: "%{name} is a duplicate of:"
+        begun_ingestion: "%{name} has already begun ingestion."
+        already_in_batch: "%{name} is already in this batch."
 
     relationship:
       add_assets: "Add New Assets to this CITI "
