1641: Expose the aic:created property in API and UI.
https://cits.artic.edu/issues/1641

--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -173,6 +173,7 @@ en:
         rights_holder:          "Rights Holder"
         tag:                    "Tag"
         created_by:             "Created By"
+        created:                "File Creation Date"
         compositing:            "Image Compositing"
         light_type:             "Image Capture Light Type"
         view:                   "Image View"
@@ -213,7 +214,7 @@ en:
         compositing_uri: "Whether the image is a composite, a part of a composite, a layer in a multi-layer image, etc."
         contributor: "Agent who participated in the creation of the resource although not in a primary role."
         created_by: "Agent who was primarily responsible for the creation of the resource."
-        date_created: "The date on which the asset was generated. Dates are accepted in the form YYYY-MM-DD, e.g. 1776-07-04."
+        created: "The date on which the asset's file was generated."
         description: "Free-text notes about the Asset, e.g. description of the subject of an image or abstract of a text document."
         digitization_source_uri: "Original document for non-born-digital assets."
         documents_for: "A CITI resource for which these assets serve as documents."
