Search for related assets (#530)
Renders a form specifically for searching assets that are related to
other CITI resources.

https://cits.artic.edu/issues/112

--- a/config/locales/lakeshore.en.yml
+++ b/config/locales/lakeshore.en.yml
@@ -34,3 +34,4 @@ en:
       metadata_required: "Enter required metadata"
       files_required_complete: "Files requirement complete"
       files_required: "Add files"
+    search_related: "Search Related Assets"
