Limit batch upload size
Related to https://cits.artic.edu/issues/2859

Enforces a limit on the number of assets that can be uploaded at once so
as to avoid issues when adding relationships to multiple assets at once.

--- a/config/locales/lakeshore.en.yml
+++ b/config/locales/lakeshore.en.yml
@@ -15,6 +15,7 @@ en:
         duplicate: "%{name} is a duplicate of:"
         begun_ingestion: "%{name} has already begun ingestion."
         already_in_batch: "%{name} is already in this batch."
+        exceeded_batch: "%{name} exceeds the limit for this batch."
 
     relationship:
       add_assets: "Add New Assets to this CITI "
